# okta_rest_auth_sample

./: CMakeLists.txt  oktauth.cpp
cshrp-rstshrp/OktraAuthSample/: .gitignore  OktraAuthSample.sln
cshrp-rstshrp/OktraAuthSample/ConsoleApp1/: AuthDialogue.Designer.cs  AuthDialogue.cs  ConsoleApp1.csproj  HydraOktaAuthentication.cs  OktaAuthSample.csproj  Program.cs  packages.config
cshrp-rstshrp/OktraAuthSample/ConsoleApp1/Properties/: AssemblyInfo.cs
cshrp-rstshrp/oktaauth/: oktaauth.sln
cshrp-rstshrp/oktaauth/ConsoleApp1/: Program.cs
